# facetool

./: .gitattributes  .gitignore  Pipfile  README.md  faceswap  faceswap.py  facetool.py  hartool  pyproject.toml  videoswap  videotool
data/: checkpoint  savedmodel.ckpt.index
facetool/: __init__.py  averager.py  classifier.py  classify.py  clusterer.py  command.py  config.py  constants.py  detect.py  errors.py  face_landmark_detection.py  face_pose.py  faceaverage.py  faceswap.py  faceswap3d.py  landmarks.py  media.py  path.py  poser.py  profiler.py  recognizer.py  swap.py  swapper.py  util.py
lib/: faceswap.py  videotool.py
test/: test-all.py  test-all.sh  tests.py
