[tool.poetry]
name = "facetool"
version = "0.1.0"
description = "Command line utility to manipulate faces in videos and images"
authors = ["Hay Kranen <huskyr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
dlib = "^19.17"
numpy = "^1.16"
opencv-python = "^4.1"
ffmpeg-python = "^0.1.17"
scikit-image = "^0.15.0"
tqdm = "^4.31"
imutils = "^0.5.2"
tensorflow = "^1.13"
pandas = "^0.24.2"
face-recognition = "^1.2"
dataknead = "^0.2.0"
sklearn = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
